--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -31,7 +31,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: "Poiret One", Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Montserrat", Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
 }
 
@@ -107,7 +107,7 @@ header img {
 
 header .intro-text .name {
     display: block;
-    font-family: "Poiret One", Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Montserrat", Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 2em;
     font-weight: 700;
 }
@@ -115,7 +115,7 @@ header .intro-text .name {
 header .intro-text .skills {
     font-size: 1.25em;
     font-weight: 300;
-    font-family: "Poiret One", Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Lora", Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
 @media(min-width:768px) {
@@ -158,7 +158,7 @@ header .intro-text .skills {
 }
 
 .navbar {
-    
+
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
 }
