--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -247,6 +247,9 @@ section.success a.active {
     transition: all ease .5s;
 }
 
+#portfolio .portfolio-link:hover {
+    background-color: #000;
+}
 #portfolio .portfolio-item .portfolio-link .caption:hover {
     opacity: 1;
 }
@@ -263,7 +266,7 @@ section.success a.active {
 }
 
 #portfolio .portfolio-item .portfolio-link .caption .caption-content i {
-    margin-top: -12px;
+    margin-top: 100px;
 }
 
 #portfolio .portfolio-item .portfolio-link .caption .caption-content h3,
@@ -507,4 +510,24 @@ footer .footer-below {
 }
 #portItem3 {
     background: #fff url('../img/portfolio/circus.png') no-repeat center center;
+}
+
+.box {
+    box-shadow:inset 1px 1px 40px 0 rgba(0,0,0,.45);
+    overflow:hidden;
+}
+
+.overlay {
+    background:rgba(0,0,0,.75);
+    text-align:center;
+    padding:45px 0 66px 0;
+    opacity:0;
+    -webkit-transition: opacity .25s ease;
+    -moz-transition: opacity .25s ease;
+    height: inherit;
+    width: inherit;
+}
+
+.box:hover .overlay {
+    opacity:1;
 }
