--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -506,10 +506,10 @@ footer .footer-below {
     background: #fff url('../img/portfolio/meets.png') no-repeat center center;
 }
 #portItem2 {
-    background: #fff url('../img/portfolio/cake.png') no-repeat center center;
+    background: #fff url('../img/portfolio/tictactoe.png') no-repeat center center;
 }
 #portItem3 {
-    background: #fff url('../img/portfolio/circus.png') no-repeat center center;
+    background: #fff url('../img/portfolio/maze.png') no-repeat center center;
 }
 
 .box {
@@ -530,4 +530,9 @@ footer .footer-below {
 
 .box:hover .overlay {
     opacity:1;
+}
+
+.img-modal {
+    height: 410px;
+    width: auto;
 }
